force-app/main/default/objects/cgcloud__Segmentation_Rule_Template__c/cgcloud__Segmentation_Rule_Template__c.object-meta.xml
<CustomObject>
    <description>Contains information that will set the behaviour for the segmentation rules associated.</description>
    <label>Segmentation Rule Template</label>
    <nameField>
        <label>Segmentation Rule Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Rule Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>