force-app/main/default/objects/cgcloud__Segmentation_Rule_Template__c/fields/cgcloud__Private__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the segmentation rule is private or not.</description>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>