force-app/main/default/objects/cgcloud__Segmentation_Rule_Template__c/fields/cgcloud__Update_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Update_Policy__c</fullName>
    <description>Type of the segmentation rule.</description>
    <label>Update Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnDemand</fullName>
            </value>
            <value>
                <fullName>Periodically</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>